Fix POOL_SIZE and BLOCK_SIZE processing in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,18 @@ set(LIBPALLOC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src CACHE PATH "Path to libpalloc 
 set(PALLOC_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/test CACHE PATH "Path to libpalloc test sources")
 set(PALLOC_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/out CACHE PATH "Output location")
 
+set(POOL_SIZE 256 CACHE STRING "Pool size in blocks")
+set(BLOCK_SIZE 8 CACHE STRING "Block size in bytes")
+
+if(NOT (${POOL_SIZE} MATCHES "^[1-9]+[0-9]*$"))
+    message(SEND_ERROR "Pool size must be a positive number")
+endif()
+add_definitions(-DPOOL_SIZE=${POOL_SIZE})
+
+if(NOT (${BLOCK_SIZE} MATCHES "^[1-9]+[0-9]*$"))
+    message(SEND_ERROR "Block size must be a positive number")
+endif()
+add_definitions(-DBLOCK_SIZE=${BLOCK_SIZE})
+
 add_subdirectory(${PALLOC_TEST_DIR})
 add_subdirectory(${LIBPALLOC_DIR})
