--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 3.4)
 
 cmake_policy(SET CMP0065 NEW)
 
-project(palloc_root)
+project(palloc)
 
-set(LIBPALLOC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src CACHE PATH "Path to libpalloc sources")
-set(PALLOC_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/test CACHE PATH "Path to libpalloc test sources")
 set(PALLOC_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/out CACHE PATH "Output location")
 
 set(POOL_SIZE 256 CACHE STRING "Pool size in blocks")
@@ -21,5 +19,5 @@ if(NOT (${BLOCK_SIZE} MATCHES "^[1-9]+[0-9]*$"))
 endif()
 add_definitions(-DBLOCK_SIZE=${BLOCK_SIZE})
 
-add_subdirectory(${PALLOC_TEST_DIR})
-add_subdirectory(${LIBPALLOC_DIR})
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/test)
